--- a/site.yaml
+++ b/site.yaml
@@ -1,4 +1,4 @@
-media_root: media # Relative path from content folder.
+media_root: media # Relative path from content folder. toto
 media_url: /media # URL where the media files are served from.
 simple_copy:
   - media/*
